--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -24,3 +24,41 @@
 input[type=checkbox] + label:before {
     margin-right: 20px;
 }
+
+.right-nav {
+    display: flex;
+}
+
+.right-nav-button-wrapper {
+    width: 42px;
+    background-color: #2AD2C9;
+}
+
+.right-nav-accordion {
+    width:0px;
+    overflow: hidden;
+}
+
+.side-nav-icon {
+    width: 11px;
+    height: 19px;
+    cursor: pointer;
+}
+.prev-side-nav-icon {
+    transform: rotate(180deg);
+}
+
+.right-nav-accordion-transition {
+    width: 400px;
+    transition: all .3s ease-in-out;
+}
+.remove-right-nav-accordion-transition {
+    width: 0px;
+    transition: all .3s ease-in-out;
+}
+
+.nav-button-wrapper {
+    display: flex;
+    justify-content: center;
+    padding-top:17px;;
+}
