--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -36,28 +36,20 @@
                             <div class="">{{eachFormElem.label}}</div>
                             <div *ngFor="let eachOption of eachFormElem.options; let ind=index;">
                                 <div class="checkbox-padding">
-                                    <input type="radio" class="form-radio" [name]="eachFormElem.name"
-                                        [id]="eachFormElem.name+ind" [value]="eachOption.value"
-                                        [(ngModel)]="eachFormElem.value">
-                                    <label [for]="eachFormElem.name+ind"
-                                        class="input-label-text radio-label-text">{{eachOption.label}}</label>
+                                    <input type="radio" class="form-radio" [name]="eachFormElem.name" [id]="eachFormElem.name+ind" [value]="eachOption.value" [(ngModel)]="eachFormElem.value">
+                                    <label [for]="eachFormElem.name+ind" class="input-label-text radio-label-text">{{eachOption.label}}</label>
                                 </div>
                                 <div class="checkbox-input-section" *ngIf="eachOption.helpField">
-                                    <div *ngFor="let eachHelpFiled of eachOption.helpField" class="radio-button-padding">
-                                        <label [for]="eachHelpFiled.name"
-                                            class="input-label-text common-label-padding">{{ eachHelpFiled.label }}</label>
-                                        <input [type]="eachHelpFiled.type" name="dummy" [(ngModel)]="eachHelpFiled.value"
-                                            class="input-element">
+                                    <div *ngFor="let eachHelpFiled of eachOption.helpField; let hfInd = index;" class="radio-button-padding">
+                                        <label [for]="eachHelpFiled.name" class="input-label-text common-label-padding">{{ eachHelpFiled.label }}</label>
+                                        <input [type]="eachHelpFiled.type" [name]="eachOption.name + ind + hfInd" [(ngModel)]="eachHelpFiled.value" class="input-element">
                                     </div>
                                 </div>
                                 <div class="radio-input-section" *ngIf="eachOption.addDetailsData">
-                                    <div class="stake-holder-section add-details-section"
-                                        *ngFor="let eachHelpFiled of eachOption.addDetailsData; let formInd=index">
-                                        <div class="input-section"
-                                            *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
+                                    <div class="stake-holder-section add-details-section" *ngFor="let eachHelpFiled of eachOption.addDetailsData; let formInd=index">
+                                        <div class="input-section" *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
                                             <div class="input-label-text">{{ eachFiled.label }}</div>
-                                            <input class="input-element" [type]="eachFiled.type"
-                                                [name]="'addDetailsData'+formInd+fieldInd" [(ngModel)]="eachFiled.value">
+                                            <input class="input-element" [type]="eachFiled.type" [name]="'addDetailsData'+formInd+fieldInd" [(ngModel)]="eachFiled.value">
                                         </div>
                                     </div>
                                     <div class="plus-stake-holder" (click)="addNewDetails(eachFormElem, ind)">
@@ -73,18 +65,52 @@
                             <div>{{eachFormElem.label}}</div>
                             <div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
                                 <div class="checkbox-padding">
-                                    <input type="checkbox" [id]="eachOption.name+ind" [name]="eachOption.name+ind"
-                                        [value]="eachOption.value" [checked]="eachOption.isSelected"
-                                        [(ngModel)]="eachOption.isSelected">
+                                    <input type="checkbox" [id]="eachOption.name+ind" [name]="eachOption.name+ind" [value]="eachOption.value" [checked]="eachOption.isSelected" [(ngModel)]="eachOption.isSelected" >
                                     <label [for]="eachOption.name+ind" class="input-label-text">{{eachOption.label}}</label>
                                 </div>
                                 <div class="checkbox-input-section" *ngIf="eachOption.helpField">
-                                    <div *ngFor="let eachHelpFiled of eachOption.helpField" class="radio-button-padding">
-                                        <label [for]="eachHelpFiled.name"
-                                            class="input-label-text common-label-padding input-field">{{ eachHelpFiled.label }}</label>
-                                        <input [type]="eachHelpFiled.type" name="dummy" [(ngModel)]="eachHelpFiled.value"
-                                            class="input-element">
+                                    <div *ngFor="let eachHelpFiled of eachOption.helpField;let hfInd = index" class="radio-button-padding">
+                                        <label [for]="eachHelpFiled.name+ind+hfInd" class="input-label-text common-label-padding input-field">{{ eachHelpFiled.label }}</label>
+                                        <input [type]="eachHelpFiled.type" [name]="eachHelpFiled.name+ind+hfInd" [(ngModel)]="eachHelpFiled.value" class="input-element">
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div *ngIf="eachFormElem.type === 'reference'">
+                            <div>{{eachFormElem.label}}</div>
+                            <div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
+                                <div class="radio-button-padding" *ngIf="eachOption.value[0].type === 'radio'">
+                                    <div class="">{{eachFormElem.label}}</div>
+                                    <div *ngFor="let eachOptionI of eachOption.value[0].options; let indi=index;">
+                                        <div class="checkbox-padding">
+                                            <input disabled type="radio" class="form-radio" [name]="eachOptionI.name+indi" [id]="eachOptionI.name+indi" [value]="eachOptionI.value" [(ngModel)]="eachOption.value[0].value">
+                                            <label [for]="eachOptionI.name+indi" class="input-label-text radio-label-text">{{eachOptionI.label}}</label>
+                                        </div>
+                                        <div class="checkbox-input-section" *ngIf="eachOptionI.helpField">
+                                            <div *ngFor="let eachHelpFiled of eachOptionI.helpField; let hfInd = index;" class="radio-button-padding">
+                                                <label class="input-label-text common-label-padding">{{ eachHelpFiled.label }}</label>
+                                                <input disabled [type]="eachHelpFiled.type" [name]="eachOptionI.name+indi+hfInd" [(ngModel)]="eachHelpFiled.value" class="input-element">
+                                            </div>
+                                        </div>
+                                        <div class="radio-input-section" *ngIf="eachOptionI.addDetailsData">
+                                            <div class="stake-holder-section add-details-section" *ngFor="let eachHelpFiled of eachOptionI.addDetailsData; let formInd=index">
+                                                <div class="input-section" *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
+                                                    <div class="input-label-text">{{ eachFiled.label }}</div>
+                                                    <input disabled class="input-element" [type]="eachFiled.type" [name]="'addDetailsData'+formInd+fieldInd" [(ngModel)]="eachFiled.value">
+                                                </div>
+                                            </div>
+                                            <!-- <div class="plus-stake-holder" (click)="addNewDetails(eachFormElem, ind)">
+                                                <img src="../assets/images/icon_Plus.png" class="icon-plus">
+                                                <div class="add-stake-holder">Add stakeholder</div>
+                                            </div> -->
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="common-block-padding" *ngIf="eachOption.value[0].type === 'text'">
+                                    <label [for]="eachOption.value[0].name" class="input-label-text common-label-padding">{{eachOption.value[0].label}}</label>
+                                    <input disabled type="text" [name]="eachOption.value[0].name+outerIndex" [(ngModel)]="eachOption.value[0].value" class="input-element">
                                 </div>
                             </div>
                         </div>
@@ -109,18 +135,18 @@
         
     </div>
     <div class="right-nav">
-            <div class="right-nav-button-wrapper">
-                <div *ngIf="openSideNavFlag" class="nav-button-wrapper">
-                    <img (click)="closeSideNav()" class="side-nav-icon" src="../assets/images/icon_arrow.png">
-                </div>
-                <div *ngIf="!openSideNavFlag " class="nav-button-wrapper">
-                    <img (click)="openSideNav()" class="side-nav-icon prev-side-nav-icon"
-                        src="../assets/images/icon_arrow.png">
-    
-                </div>
+        <div class="right-nav-button-wrapper">
+            <div *ngIf="openSideNavFlag" class="nav-button-wrapper">
+                <img (click)="closeSideNav()" class="side-nav-icon" src="../assets/images/icon_arrow.png">
             </div>
-            <div class="right-nav-accordion" #rightNavAccordion>
-                <app-accordion></app-accordion>
+            <div *ngIf="!openSideNavFlag " class="nav-button-wrapper">
+                <img (click)="openSideNav()" class="side-nav-icon prev-side-nav-icon"
+                    src="../assets/images/icon_arrow.png">
+
             </div>
         </div>
+        <div class="right-nav-accordion" #rightNavAccordion>
+            <app-accordion></app-accordion>
+        </div>
+    </div>
 </div>
