--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -33,7 +33,7 @@
     
     
                         <div class="radio-button-padding" *ngIf="eachFormElem.type === 'radio'">
-                            <div class="">{{eachFormElem.label}}</div>
+                            <div class="check-and-radio-heading">{{eachFormElem.label}}</div>
                             <div *ngFor="let eachOption of eachFormElem.options; let ind=index;">
                                 <div class="checkbox-padding">
                                     <input type="radio" class="form-radio" [name]="eachFormElem.name" [id]="eachFormElem.name+ind" [value]="eachOption.value" [(ngModel)]="eachFormElem.value">
@@ -62,7 +62,7 @@
     
     
                         <div *ngIf="eachFormElem.type === 'checkbox'">
-                            <div>{{eachFormElem.label}}</div>
+                            <div class="check-and-radio-heading">{{eachFormElem.label}}</div>
                             <div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
                                 <div class="checkbox-padding">
                                     <input type="checkbox" [id]="eachOption.name+ind" [name]="eachOption.name+ind" [value]="eachOption.value" [checked]="eachOption.isSelected" [(ngModel)]="eachOption.isSelected" >
@@ -79,7 +79,7 @@
 
 
                         <div *ngIf="eachFormElem.type === 'reference'">
-                            <div>{{eachFormElem.label}}</div>
+                            <div >{{eachFormElem.label}}</div>
                             <div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
                                 <div class="radio-button-padding" *ngIf="eachOption.value[0].type === 'radio'">
                                     <div class="">{{eachFormElem.label}}</div>
