--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,24 +1,26 @@
 
-<div class="landing-section">
-    <div>
-        <section>
-            <form>
-              <div *ngFor="let dataGroup of userInfoForm.data">
-                <div>{{dataGroup.question}}</div>
-                <div *ngFor="let eachFormElem of dataGroup.formData">
-                  <div class="input-section">
-                    <label [for]="eachFormElem.name" class="input-label-text">{{eachFormElem.label}}</label>
-                    <input  type="text" [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value" class="input-element">
+<div class="landing-section-wrapper">
+    <div class="landing-section">
+        <div>
+            <section>
+                <form>
+                  <div *ngFor="let dataGroup of userInfoForm.data">
+                    <div>{{dataGroup.question}}</div>
+                    <div *ngFor="let eachFormElem of dataGroup.formData">
+                      <div class="input-section">
+                        <label [for]="eachFormElem.name" class="input-label-text">{{eachFormElem.label}}</label>
+                        <input  type="text" [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value" class="input-element">
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="common-button-styles">
-                <div (click)="getStarted()" class="button-styling">
-                  Get Started
-                  <img class="next-arrow" src="../assets/images/icon_arrow.png">
-                </div>
-              </div>
-            </form>
-          </section>      
-    </div>
-  </div>
+                  <div class="common-button-styles">
+                    <div (click)="getStarted()" class="button-styling">
+                      Get Started
+                      <img class="next-arrow" src="../assets/images/icon_arrow.png">
+                    </div>
+                  </div>
+                </form>
+              </section>      
+        </div>
+      </div>
+</div>
