Fix accordio issue

--- a/src/app/utilities/accordion/accordion.component.html
+++ b/src/app/utilities/accordion/accordion.component.html
@@ -36,7 +36,7 @@
         </ng-template>
     </p-accordionTab>
     <p-accordionTab header="Godfather I"  class="accordion-header">
-        <p-header class="accordion-heading">
+        <p-header class="accordion-heading" (click)="gotFinish()">
             <div class="accordion-title">Finish</div>
         </p-header>
     </p-accordionTab>
