accordion border styles added

--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -27,3 +27,7 @@
 .active-que {
     font-weight: 600;
 }
+.accordion-header {
+    border-top: 1px solid #614767;
+    border-bottom: 1px solid #614767;
+}
