Add previous functionality in conclusion page

--- a/src/app/components/conclusion/conclusion.component.html
+++ b/src/app/components/conclusion/conclusion.component.html
@@ -19,7 +19,7 @@
   </div>
 
 <div class="common-button-styles">
-              <div class="button-styling prev-arrow-button" >
+              <div class="button-styling prev-arrow-button" (click)="previousQuestion()">
                   Previous
                   <img class="prev-arrow" src="../../../assets/images/icon_arrow.png">
               </div>
