--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,26 +1,66 @@
+<!-- <div class="landing-section-wrapper">
+    <div class="landing-section">
+        <div>
+            <section>
+                <div class="section-heading">Resume session:</div>
+                <form>
+                    <div>
+                        <div class="question-title"></div>
+                        <div>
+                            <div class="">
+                                <div class="resume-session-properties">
+                                    <label class="input-label-text">Sales Rep Name:</label>
+                                    <label class="input-label-text">Gareth Rabb</label>
+                                </div>
+                                <div class="resume-session-properties">
+                                    <label class="input-label-text">Customer Name:</label>
+                                    <label class="input-label-text">Pam</label>
+                                </div>
+                                <div class="resume-session-properties">
+                                    <label class="input-label-text">Customer Company</label>
+                                    <label class="input-label-text">Hospice</label>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="common-button-styles">
+                        <div class="button-styling">
+                            Resume
+                            <img class="next-arrow" src="../assets/images/icon_arrow.png">
+                        </div>
+                    </div>
+                </form>
+            </section>
+        </div>
+    </div>
+</div> -->
+
 
 <div class="landing-section-wrapper">
     <div class="landing-section">
         <div>
             <section>
+                <div class="section-heading">Start a new session:</div>
                 <form>
-                  <div *ngFor="let dataGroup of userInfoForm.data">
-                    <div>{{dataGroup.question}}</div>
-                    <div *ngFor="let eachFormElem of dataGroup.formData">
-                      <div class="input-section">
-                        <label [for]="eachFormElem.name" class="input-label-text">{{eachFormElem.label}}</label>
-                        <input  type="text" [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value" class="input-element">
-                      </div>
+                    <div *ngFor="let dataGroup of userInfoForm.data">
+                        <div class="question-title">{{dataGroup.question}}</div>
+                        <div *ngFor="let eachFormElem of dataGroup.formData">
+                            <div class="input-section">
+                                <label [for]="eachFormElem.name" class="input-label-text">{{eachFormElem.label}}</label>
+                                <input type="text" [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value"
+                                    class="input-element">
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                  <div class="common-button-styles">
-                    <div (click)="getStarted()" class="button-styling">
-                      Get Started
-                      <img class="next-arrow" src="../assets/images/icon_arrow.png">
+                    <div class="common-button-styles">
+                        <div (click)="getStarted()" class="button-styling">
+                            Get Started
+                            <img class="next-arrow" src="../assets/images/icon_arrow.png">
+                        </div>
                     </div>
-                  </div>
                 </form>
-              </section>      
+            </section>
         </div>
-      </div>
+    </div>
 </div>
