right side section integration

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -146,7 +146,7 @@
             </div>
         </div>
         <div class="right-nav-accordion" #rightNavAccordion>
-            <app-accordion></app-accordion>
+           <app-right-accordian></app-right-accordian>
         </div>
     </div>
 </div>
