--- a/src/app/utilities/right-accordian/right-accordian.component.html
+++ b/src/app/utilities/right-accordian/right-accordian.component.html
@@ -1,4 +1,4 @@
-<p-accordion (onOpen)="onTabOpen($event)" (onClose)="onTabClose($event)" *ngIf="metaData && metaData.matadata">
+<p-accordion (onOpen)="onTabOpen($event)" (onClose)="onTabClose($event)" *ngIf="metaData && metaData.matadata" class="accordion-header">
     <p-accordionTab header="Godfather I" class="accordion-header"
         *ngFor="let eachMetaData of metaData.matadata;let i =index">
         <p-header class="accordion-heading">
@@ -6,12 +6,18 @@
             <img src="../assets/images/icon_Plus.png" class="icon-plus" *ngIf="openAccordionIndex !== i">
             <img src="../assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex == i">
         </p-header>
+
         <ng-template pTemplate="content">
-            <div class="d-flex accordion-heading" *ngFor="let content of eachMetaData.data">
-                <div>
-                    <span class="input-label-text subheading-label-text" *ngIf="content.subHeading">{{content.subHeading}}:</span>{{content.content}}
-                </div>
-            </div>
+            <ul>
+                <li *ngFor="let content of eachMetaData.data">
+                    <div class="d-flex accordion-heading">
+                        <div>
+                            <span class="input-label-text subheading-label-text"
+                                *ngIf="content.subHeading">{{content.subHeading}}:</span>{{content.content}}
+                        </div>
+                    </div>
+                </li>
+            </ul>            
         </ng-template>
     </p-accordionTab>
 </p-accordion>
