right side nav collapsing issue fixed

--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -65,3 +65,10 @@ input[type=checkbox] + label:before {
 .check-and-radio-heading {
     padding-bottom: 38px;
 }
+.disable{
+    pointer-events: none;
+}
+
+.changeColor{
+    /* background-color: #ffffff; */
+}
