--- a/src/app/components/conclusion/conclusion.component.html
+++ b/src/app/components/conclusion/conclusion.component.html
@@ -14,8 +14,8 @@
       </div>
     </div>
   </div>
-  <div *ngIf="!unansweredQuestions.length">
-    Please finish the test...
+  <div *ngIf="!unansweredQuestions.length" class="submit-text">
+    You answered all the questions. Click finish button to complete the test.
   </div>
 
 <div class="common-button-styles">
