--- a/src/app/components/conclusion/conclusion.component.css
+++ b/src/app/components/conclusion/conclusion.component.css
@@ -15,6 +15,9 @@
     font-size: 20px;
     line-height: 22px;
     padding-top: 45px;
-    padding-bottom: 25px;
-    
+    padding-bottom: 25px;    
+}
+.submit-text{
+    font-size: 20px;
+    color:#191919;
 }
