--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -41,9 +41,9 @@
     <div class="landing-section">
         <div>
             <section>
-                <div class="section-heading">Start a new session:</div>
+                <div class="section-heading main-heading">Start a new session:</div>
                 <form>
-                    <div *ngFor="let dataGroup of userInfoForm.data">
+                    <div *ngFor="let dataGroup of userInfoForm.data" class="common-block-padding">
                         <div class="question-title">{{dataGroup.question}}</div>
                         <div *ngFor="let eachFormElem of dataGroup.formData">
                             <div class="input-section">
@@ -53,9 +53,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="common-button-styles">
+                    <div class="common-button-styles margin-0">
                         <div (click)="getStarted()" class="button-styling">
-                            Get Started
+                        Get Started
                             <img class="next-arrow" src="../assets/images/icon_arrow.png">
                         </div>
                     </div>
