QA fixes and image path issue solved

--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -72,3 +72,7 @@ input[type=checkbox] + label:before {
 .changeColor{
     /* background-color: #ffffff; */
 }
+
+.checkbox-helpfield-section{
+    padding-left:40px;
+}
