--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -27,7 +27,7 @@
                     <div class="common-button-styles">
                         <div class="button-styling">
                             Resume
-                            <img class="next-arrow" src="../assets/images/icon_arrow.png">
+                            <img class="next-arrow" src="/assets/images/icon_arrow.png">
                         </div>
                     </div>
                 </form>
@@ -55,8 +55,8 @@
                     </div>
                     <div class="common-button-styles margin-0">
                         <div (click)="getStarted()" class="button-styling">
-                        Get Started
-                            <img class="next-arrow" src="../assets/images/icon_arrow.png">
+                            <div>Get Started</div>
+                            <img class="next-arrow" src="/assets/images/icon_arrow.png">
                         </div>
                     </div>
                 </form>
