--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -39,7 +39,7 @@
                                     <input type="radio" class="form-radio" [name]="eachFormElem.name" [id]="eachFormElem.name+ind" [value]="eachOption.value" [(ngModel)]="eachFormElem.value">
                                     <label [for]="eachFormElem.name+ind" [innerHtml]="eachOption.label" class="input-label-text radio-label-text"></label>
                                 </div>
-                                <div class="checkbox-input-section" *ngIf="eachOption.helpField">
+                                <div class="checkbox-input-section checkbox-helpfield-section" *ngIf="eachOption.helpField">
                                     <div *ngFor="let eachHelpFiled of eachOption.helpField; let hfInd = index;" class="radio-button-padding">
                                         <label [for]="eachHelpFiled.name" class="input-label-text common-label-padding">{{ eachHelpFiled.label }}</label>
                                         <input [type]="eachHelpFiled.type" [name]="eachOption.name + ind + hfInd" [(ngModel)]="eachHelpFiled.value" class="input-element">
@@ -53,7 +53,7 @@
                                         </div>
                                     </div>
                                     <div class="plus-stake-holder" (click)="addNewDetails(eachFormElem, ind)">
-                                        <img src="../assets/images/icon_Plus.png" class="icon-plus">
+                                        <img src="/assets/images/icon_Plus.png" class="icon-plus">
                                         <div class="add-stake-holder">Add stakeholder</div>
                                     </div>
                                 </div>
@@ -68,7 +68,7 @@
                                     <input type="checkbox" [id]="eachOption.name+ind" [name]="eachOption.name+ind" [value]="eachOption.value" [checked]="eachOption.isSelected" [(ngModel)]="eachOption.isSelected" >
                                     <label [for]="eachOption.name+ind" class="input-label-text">{{eachOption.label}}</label>
                                 </div>
-                                <div class="checkbox-input-section" *ngIf="eachOption.helpField">
+                                <div class="checkbox-input-section checkbox-helpfield-section" *ngIf="eachOption.helpField">
                                     <div *ngFor="let eachHelpFiled of eachOption.helpField;let hfInd = index" class="radio-button-padding">
                                         <label [for]="eachOption.name + ind + hfInd" class="input-label-text common-label-padding input-field">{{ eachHelpFiled.label }}</label>
                                         <input [type]="eachHelpFiled.type" [name]="eachOption.name + ind + hfInd" [(ngModel)]="eachHelpFiled.value" class="input-element">
@@ -88,7 +88,7 @@
                                             <input disabled type="radio" class="form-radio" [name]="eachOptionI.name+indi" [id]="eachOptionI.name+indi" [value]="eachOptionI.value" [(ngModel)]="eachOption.value[0].value">
                                             <label [for]="eachOptionI.name+indi" class="input-label-text radio-label-text">{{eachOptionI.label}}</label>
                                         </div>
-                                        <div class="checkbox-input-section" *ngIf="eachOptionI.helpField">
+                                        <div class="checkbox-input-section checkbox-helpfield-section" *ngIf="eachOptionI.helpField">
                                             <div *ngFor="let eachHelpFiled of eachOptionI.helpField; let hfInd = index;" class="radio-button-padding">
                                                 <label class="input-label-text common-label-padding">{{ eachHelpFiled.label }}</label>
                                                 <input disabled [type]="eachHelpFiled.type" [name]="eachOptionI.name+indi+hfInd" [(ngModel)]="eachHelpFiled.value" class="input-element">
@@ -102,7 +102,7 @@
                                                 </div>
                                             </div>
                                             <!-- <div class="plus-stake-holder" (click)="addNewDetails(eachFormElem, ind)">
-                                                <img src="../assets/images/icon_Plus.png" class="icon-plus">
+                                                <img src="/assets/images/icon_Plus.png" class="icon-plus">
                                                 <div class="add-stake-holder">Add stakeholder</div>
                                             </div> -->
                                         </div>
@@ -122,11 +122,11 @@
                     <div class="common-button-styles">
                         <div *ngIf="currentPage != 0" class="button-styling prev-arrow-button" (click)="previousQuestion()">
                             Previous
-                            <img class="prev-arrow" src="../assets/images/icon_arrow.png">
+                            <img class="prev-arrow" src="/assets/images/icon_arrow.png">
                         </div>
                         <div class="button-styling" (click)="nextQuestion()">
                             Next
-                            <img class="next-arrow" src="../assets/images/icon_arrow.png">
+                            <img class="next-arrow" src="/assets/images/icon_arrow.png">
                         </div>
                     </div>
                 </form>
@@ -137,11 +137,11 @@
     <div class="right-nav" [ngClass]="{'disable':!metaData.matadata}">
         <div class="right-nav-button-wrapper" [ngClass]="{'changeColor':!metaData.matadata}">
             <div *ngIf="openSideNavFlag" class="nav-button-wrapper">
-                <img (click)="closeSideNav()" class="side-nav-icon" src="../assets/images/icon_arrow.png">
+                <img (click)="closeSideNav()" class="side-nav-icon" src="/assets/images/icon_arrow.png">
             </div>
             <div *ngIf="!openSideNavFlag " class="nav-button-wrapper">
                 <img (click)="openSideNav()" class="side-nav-icon prev-side-nav-icon"
-                    src="../assets/images/icon_arrow.png">
+                    src="/assets/images/icon_arrow.png">
 
             </div>
         </div>
