--- a/src/app/utilities/accordion/accordion.component.html
+++ b/src/app/utilities/accordion/accordion.component.html
@@ -2,8 +2,8 @@
     <p-accordionTab header="Godfather I" class="accordion-header" #kickoffQuestions [cache]=false>
         <p-header class="accordion-heading">
             <div class="accordion-title">{{massagesQuestionnaireData.kickOffQuestions.name}}</div>
-            <img src="../assets/images/icon_Plus.png" class="icon-plus" *ngIf="openAccordionIndex != 0">
-            <img src="../assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex == 0">
+            <img src="/assets/images/icon_Plus.png" class="icon-plus" *ngIf="openAccordionIndex != 0">
+            <img src="/assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex == 0">
         </p-header>
         <ng-template pTemplate="content">
             <div *ngFor="let eachQue of massagesQuestionnaireData.kickOffQuestions.data; let ind= index">
@@ -23,8 +23,8 @@
     <p-accordionTab header="Godfather I" class="accordion-header" #nextsteps [cache]=false>
         <p-header class="accordion-heading">
             <div class="accordion-title">{{massagesQuestionnaireData.nextSteps.name}}</div>
-            <img src="../assets/images/icon_Plus.png" class="icon-plus" *ngIf="openAccordionIndex != 1">
-            <img src="../assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex == 1">
+            <img src="/assets/images/icon_Plus.png" class="icon-plus" *ngIf="openAccordionIndex != 1">
+            <img src="/assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex == 1">
         </p-header>
         <ng-template pTemplate="content">
             <div *ngFor="let eachQue of massagesQuestionnaireData.nextSteps.data; let ind= index">
